[package]
name = "celestia"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
default-run = "celestia-node"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
celestia-node = { workspace = true }
celestia-rpc = { workspace = true, features = ["p2p"] }
celestia-types = { workspace = true }

anyhow = "1.0.71"
hex = "0.4.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
libp2p = "0.52.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4.4", features = ["derive"] }
dotenvy = "0.15.7"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }

rust-embed="8.0.0"
axum = "0.6.20"
mime_guess = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"]}
web-sys = { version = "0.3.64", features = ["console"]}
tracing-wasm = "0.2.1"
